--- a/client/package.json
+++ b/client/package.json
@@ -6,20 +6,17 @@
   "homepage": "./ui",
   "packageManager": "npm@9.8.1",
   "dependencies": {
-    "@date-io/date-fns": "^2.17.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.11",
-    "@mui/x-date-pickers": "^6.19.5",
     "@popperjs/core": "^2.11.8",
     "@trendmicro/react-sidenav": "^0.5.0",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
     "css-loader": "^6.10.0",
-    "date-fns": "^2.17.0",
+    "date-fns": "^3.5.0",
     "event-source-polyfill": "^1.0.31",
-    "font-awesome": "^4.7.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "lossless-json": "^4.0.1",
@@ -32,7 +29,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.1",
     "react-timeago": "^7.2.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.5"
   },
   "scripts": {
     "start": "vite",
@@ -54,6 +51,9 @@
     "@babel/core": "^7.23.9",
     "@babel/eslint-parser": "^7.23.10",
     "@babel/preset-react": "^7.23.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
@@ -62,16 +62,16 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react": "^7.34.1",
     "joi": "^17.12.2",
     "joi-browser": "^13.4.0",
     "jsdom": "^24.0.0",
     "moment": "^2.30.1",
     "prettier": "^3.2.5",
     "react-test-renderer": "^18.2.0",
-    "sass": "^1.71.1",
+    "sass": "^1.72.0",
     "style-loader": "^3.3.4",
     "vite": "^5.1.6",
-    "vitest": "^1.3.1"
+    "vitest": "^1.4.0"
   }
 }
