--- a/build.gradle
+++ b/build.gradle
@@ -224,6 +224,8 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
     testImplementation 'com.salesforce.kafka.test:kafka-junit5:3.2.5'
+
+    testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
 testlogger {
