--- a/build.gradle
+++ b/build.gradle
@@ -256,13 +256,7 @@ task testInjectData(type:JavaExec) {
 
 test.dependsOn "startTestKafkaCluster"
 
-task startTestKafkaCluster(type: com.github.psxpaul.task.JavaExecFork) {
-    dependsOn 'testClasses'
-    dependsOn 'buildLayers'
-    dependsOn 'shadowDistZip'
-    dependsOn 'shadowDistTar'
-    dependsOn 'distZip'
-    dependsOn 'distTar'
+task startTestKafkaCluster(type: com.github.psxpaul.task.JavaExecFork, dependsOn: 'testClasses') {
     group = 'verification'
     description = 'Start a global standalone test Kafka cluster during tests'
     classpath = sourceSets.test.runtimeClasspath
