feat(auth): add ability to send an authentication header to external service

--- a/src/test/resources/application-rest-api.yml
+++ b/src/test/resources/application-rest-api.yml
@@ -34,4 +34,7 @@ akhq:
           - admin
     rest:
       enabled: true
+      token-header:
+        name: X-Custom-Authentication
+        value: Bearer custom-authentication
       url: /external-mock
