fix(ui): missing default right on consumer group

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -152,7 +152,7 @@ akhq:
           actions: [ "READ", "CREATE", "DELETE" ]
       consumer-group-admin:
         - resources: [ "CONSUMER_GROUP" ]
-          actions: [ "READ", "UPDATE_OFFSET", "DELETE_OFFSET" ]
+          actions: [ "READ", "UPDATE_OFFSET", "DELETE", "DELETE_OFFSET" ]
       connect-cluster-reader:
         - resources: [ "CONNECT_CLUSTER" ]
           actions: [ "READ" ]
