--- a/build.gradle
+++ b/build.gradle
@@ -124,9 +124,9 @@ dependencies {
     implementation group: 'io.strimzi', name: 'kafka-oauth-client', version: '0.15.0'
 
     // log
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha5'
-    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.0-alpha5'
-    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.0-alpha5'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.13'
+    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.13'
+    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '2.0.13'
 
     // utils
     implementation group: 'org.codehaus.httpcache4j.uribuilder', name: 'uribuilder', version: '2.0.0'
@@ -139,11 +139,11 @@ dependencies {
     implementation 'org.apache.avro:avro:1.11.3'
 
     // jackson-module-scala
-    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-scala_2.13', version: '2.13.4'
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-scala_2.13', version: '2.17.1'
 
     // protobuf
-    implementation group: "com.google.protobuf", name: "protobuf-java", version: '3.25.0'
-    implementation group: "com.google.protobuf", name: "protobuf-java-util", version: '3.25.0'
+    implementation group: "com.google.protobuf", name: "protobuf-java", version: '4.27.0'
+    implementation group: "com.google.protobuf", name: "protobuf-java-util", version: '4.27.0'
 
     // Password hashing
     implementation group: "org.mindrot", name: "jbcrypt", version: "0.4"
