--- a/build.gradle
+++ b/build.gradle
@@ -236,6 +236,7 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
     testImplementation 'org.mockito:mockito-junit-jupiter'
     testImplementation 'com.salesforce.kafka.test:kafka-junit5:3.2.5'
+    testImplementation 'org.apache.curator:curator-test:5.6.0'
 
     testImplementation 'org.awaitility:awaitility:4.2.1'
 }
